syntax = "proto3";

package pkg;

option go_package = ".;pb";

service Generator {
  rpc GetData(DataRequest) returns (DataResponse);
 }

message DataRequest {
  
}

message DataResponse {
  string session_id = 1;
  double frequency = 2;
  string timestamp = 3;
}
